Cierre curso html y css p3

--- a/logica/Html_Css_JS/style-home.css
+++ b/logica/Html_Css_JS/style-home.css
@@ -1,5 +1,49 @@
+header {
+	background-color: #BBBBBB;
+	padding: 20px 0;
+}
+
+.caja {
+	width: 940px;
+	position: relative;
+	margin: 0 auto;
+}
+
 .titulo-principal{
 	padding-left: 30px;
+	font-size: 30px;
+	text-align: left;
+	display: inline;
+}
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
+}
+
+nav ul {
+	display: inline;
+	margin: 0 0 0 15px;
+}
+
+nav li{
+	display: inline;
+	margin: 0 0 0 15px;
+	text-align: right;
+}
+
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+}
+
+nav a:hover {
+	color: #c78c19;
+	text-decoration: underline;
 }
 
 #banner{ /* # referenciador hacia un id */
@@ -7,57 +51,74 @@
 	align-content: center;
 }
 
+main {
+	align-content: center;
+}
+
 .principal{ /* . referenciador a una clase */
 	background: #CCCCCC;
-	padding: 20px;
+	padding: 0 10%;
+	margin: 0 auto;
 }
 
-.titulo-centrado{
+.titulo-centrado {
 	text-align: center;
+	font-size: 30px;
+	padding: 10px;
 }
 
-/*
-h1{
-	text-align: center;
-	height: 150px;
-	border: 10px solid #000000;
-	padding: 20px;
-	margin: 40px; \* espaciado externo del elemento en relación a la página *\
-}
-*/
-p{
+.presentacion {
 	text-align: center;
 	background: #CCCCCC;
+	padding: 10px 20px;
+	margin: 0 auto;
+
 }
 
 em strong{ /* etiquetas anidadas, este bloque aplicará cuando se encuentre ambas etiquetas juntas en el mismo orden */
-	color: red;
+	color: royalblue;
 }
 
 #mision{
-	font-size: 20px;
+	font-size: 22px;
+	text-align: center;
 }
 
 .diferenciales{
 	background: #FFFFFF;
-	padding: 20px; /* espaciado interno del elemento en relación a su contenido */
+	padding: 20px 20px; /* espaciado interno del elemento en relación a su contenido */
+	margin: 0 10%;
 }
 
 h2{
 	text-align: center;
 }
 
-.items{
-	font-style: italic;
-}
-
-ul{
+.diferenciales ul {
 	display: inline-block; /* ayuda a que las listas no ocupen el 100% de la pantalla y no den salto de linea con cada elemento */
 	vertical-align: top;
 	width: 20%;
 	margin-right: 15%;
 }
 
+.items{
+	font-style: italic;
+	font-size: 20px;
+}
+
 .imagenDiferenciales{
 	width: 50%;
+	align: right;
+}
+
+footer {
+	text-align: center;
+	background: url("images/bg.jpg");
+	padding: 40px;
+}
+
+.copyright {
+	color: #ffffff;
+	font-size: 13px;
+	margin: 20px;
 }
