--- a/logica/Html_Css_JS/style.css
+++ b/logica/Html_Css_JS/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Heebo', sans-serif;
+}
+
 header {
 	background-color: #BBBBBB;
 	padding: 20px 0;
@@ -91,11 +95,6 @@ footer {
 	margin: 20px;
 }
 
-main {
-	width: 940px;
-	margin: 0 auto;
-}
-
 form {
 	margin: 40px 0;
 }
@@ -151,3 +150,117 @@ td, th {
 	padding: 8px 15px;
 }
 
+/* CSS para home */
+
+.banner {
+	width: 100%;
+}
+
+.principal{
+	background: #fefefe;
+	padding: 3em 0;
+	width: 940px;
+	margin: 0 auto;
+}
+
+.titulo-principal{
+	text-align: center;
+	font-size: 2em; /* multiplica por 2 el tamaño fuente por defecto del navegador */
+	margin: 0 0 1em;
+	clear: left;
+	/* color: rgba(0, 0, 0, 60%); */ /* rgba permite pasar como 4to parametro la opacidad del elemento */
+}
+
+.principal p{
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0; /* sup der inf izq */
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#fefefe,#888888);
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.mapa-contenido{
+	width: 940px;
+	margin: 0 auto;
+}
+
+.diferenciales{
+	padding: 3em 0;
+	background: #888888;
+}
+
+.contenido-diferenciales {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-diferenciales {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.items {
+	line-height: 1.5; /* 1+ 50% del tamaño de la fuente por defecto */
+}
+
+.items:before{ /* pseudo elementos, referencian a partes de una clase para agregar elementos o características sin modificar el html */
+	content: "✔ ";
+}
+
+.items:nth-child(1) { /* pseudoclases, referencias a elementos de una clase */
+	font-weight: bold;
+}
+
+.imagen-diferenciales{
+	width: 60%;
+	transition: 400ms;
+	box-shadow: 10px 10px 30px 15px #000000; /* x y difuminadoX difuminadoY color */
+}
+
+.imagen-diferenciales:hover{
+	opacity: 60%;
+}
+
+.video {
+	width: 560px;
+	margin: 1em auto;
+}
+
+@media screen and (max-width:480px){ /* media queries para condicionar por el tamaño de la pantalla */
+	h1{
+		text-align: center;
+	}
+
+	nav{
+		position: static;
+	}
+
+	.caja, .principal, .mapa-contenido, .contenido-diferenciales, .video{
+		width: auto;
+	}
+
+	.lista-diferenciales, .imagen-diferenciales{
+		width: 100%;
+	}
+}
