--- a/logica/Html_Css_JS/style.css
+++ b/logica/Html_Css_JS/style.css
@@ -49,7 +49,7 @@ nav a:hover {
 	text-align: center;
 	width: 30%;
 	vertical-align: top;
-	margin: 0 1%; /* arriba-abajo izq-der */
+	margin: 10px 1%; /* arriba-abajo izq-der */
 	padding: 30px 20px; /* vertical horizontal */
 	box-sizing: border-box; /* para que no se rebase el tamaño de cada elemento */
 	border: 2px solid #000000; /* width style color */
@@ -95,19 +95,24 @@ footer {
 	margin: 20px;
 }
 
+.contacto {
+	width: 940px;
+	margin: 0 auto;
+}
+
 form {
-	margin: 40px 0;
+	margin: 40px auto;
 }
 
 form label, form legend {
 	display: block;
 	font-size: 20px;
-	margin: 0 0 10px;
+	margin: 1em 0 10px;
 }
 
 .input-padron {
 	display: block;
-	margin: 0 0 20px;
+	margin: 1em 0 20px;
 	padding: 10px 25px;
 	width: 50%;
 }
@@ -150,7 +155,7 @@ td, th {
 	padding: 8px 15px;
 }
 
-/* CSS para home */
+/********** CSS para home **********/
 
 .banner {
 	width: 100%;
@@ -161,6 +166,7 @@ td, th {
 	padding: 3em 0;
 	width: 940px;
 	margin: 0 auto;
+	text-align: justify;
 }
 
 .titulo-principal{
@@ -256,11 +262,29 @@ td, th {
 		position: static;
 	}
 
-	.caja, .principal, .mapa-contenido, .contenido-diferenciales, .video{
+	.caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos, .contacto{
 		width: auto;
 	}
 
-	.lista-diferenciales, .imagen-diferenciales{
+	.principal, .contenido-diferenciales, .contacto{
+		margin: auto 1em;
+	}
+
+	.lista-diferenciales, .imagen-diferenciales, .productos li, .imagen-productos{
 		width: 100%;
+		margin: 1em 0;
+	}
+
+	.checkbox{
+		margin: 5% auto;
+	}
+
+	.enviar{
+		margin: auto 20%;
+		width: 60%;
+	}
+
+	table{
+		margin: 1.5em auto;
 	}
 }
